# django-bookstack

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml
django_bookstack/: apps.py  urls.py  views.py
django_bookstack/bookstack/: __init__.py  api.py  utils.py
django_bookstack/templates/django_bookstack/: bookstack_wrapper.html
django_bookstack/templatetags/: __init__.py  bookstack.py
