[metadata]
name = django-bookstack
version = 0.0.3
description = A Django app to consume the bookstack API.
long_description = file: README.rst
url = https://github.com/jraylan/django-bookstack
author = Jefferson Raylan
author_email = jeffersonraylan@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
[options]
include_package_data = true
packages = find:
python_requires = >=2.7
install_requires =
    Django >= 1.11 
    simplejson
